fixing up maze gen

--- a/src/config/gameplay.ini
+++ b/src/config/gameplay.ini
@@ -7,11 +7,9 @@ window_title = Brain Maze
 [Maze]
 grid_size = 20
 tile_size = 40
-# Wall density for Pac-Man style scattered walls (0.0 to 1.0)
-wall_density = 0.2
-# Maximum wall segment length in tiles (Pac-Man style)
-max_wall_length = 4
-# Maximum generation attempts for connectivity
+min_wall_length = 1
+max_wall_length = 5
+orientation = vertical
 max_generation_attempts = 100
 
 [Player]
