Update configuration files in src/config (#29)
* Clean up configuration files in src/config

- Standardize naming: 'title' → 'window_title' across all configs
- Add file-level documentation headers to all three config files
- Improve section organization with better comments
- Add subcategory comments in Colors sections for clarity
- Enhance readability and maintainability

* Deduplicate config settings to establish single source of truth

- Remove duplicate colors from maze_config.ini (background, wall, start_tile, end_tile)
- Update maze_editor.py to load gameplay.ini for shared colors
- Fix bug in maze_editor.py: use 'window_title' instead of deprecated 'title'
- Add documentation explaining color source of truth in maze_config.ini
- Maintain editor-specific colors (corridor, chamber, grid_lines, frontier) in maze_config.ini

This ensures gameplay.ini is the single source of truth for shared visual elements
while preserving editor-specific settings for the development tool.

* Implement progressive maze size scaling for difficulty progression

Add dynamic maze size scaling that increases difficulty gradually over levels:

Algorithm:
- Linear interpolation from min (11x11) to max (31x31) over 20 levels
- Grid size always odd (required for proper maze generation)
- Size stays at maximum after reaching progression_levels threshold
- Results in ~8x complexity increase from start to max

Changes:
- gameplay.ini: Add grid_size_min, grid_size_max, grid_size_progression_levels
- gameplay.ini: Remove static grid_size setting
- game_state.py: Add get_grid_size_for_level() method with linear interpolation
- main.py: Use dynamic grid size from game_state instead of config
- test_maze_size_progression.py: Visualization test showing size progression

Example progression:
  Level 1:  11x11 (121 cells)
  Level 5:  15x15 (225 cells)
  Level 10: 21x21 (441 cells)
  Level 15: 25x25 (625 cells)
  Level 20: 31x31 (961 cells)
  Level 21+: 31x31 (stays at max)

* Fix maze mirroring to 

--- a/src/config/maze_config.ini
+++ b/src/config/maze_config.ini
@@ -1,3 +1,6 @@
+# Configuration for the Maze Parameter Editor tool
+# This is used for developing and testing maze generation algorithms
+
 [Grid]
 width = 21
 height = 21
@@ -7,7 +10,7 @@ tile_size = 30
 window_width = 800
 window_height = 900
 fps = 60
-title = Maze Parameter Editor
+window_title = Maze Parameter Editor
 
 [Generation]
 fill_target = 0.95
@@ -18,11 +21,12 @@ corridor_length_max = 8
 max_attempts = 5
 
 [Colors]
-background = 20, 20, 30
-wall = 60, 60, 80
+# RGB color values specific to maze editor visualization
+# Note: Shared colors (background, wall, start_tile, end_tile) are loaded from gameplay.ini
+# Maze element colors (editor-specific)
 corridor = 40, 40, 50
 chamber = 100, 100, 120
-start_tile = 50, 200, 50
-end_tile = 200, 50, 50
-frontier = 100, 150, 255
+# Editor UI
 grid_lines = 50, 50, 60
+# Algorithm visualization
+frontier = 100, 150, 255
